--- a/1.Simple Calculator/index.html
+++ b/1.Simple Calculator/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
     <meta name="description" content="JavaScript calculator designed to provide
-         an intuitive and easy-to-use user experience!">
+        an intuitive and easy-to-use user experience!">
 
     <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="./Style/Style.css">
@@ -15,13 +15,13 @@
 <body>
     <div class="grid-container">
 
-        <input type="text" id="otp" value="0" readonly aria-label="Valor da Calculadora">
+        <input type="text" id="otp" value="0" readonly aria-label="Simple Calendar">
 
-        <button class="button clearbt" id="botaoClean">C</button>
+        <button class="button clearbt" id="clearid">C</button>
         <button class="button operando">÷</button>
         <button class="button operando">x</button>
-        <button class="button" id="botaoBack">
-            <img src="./images/apagar.svg" alt="apagar" class="back">
+        <button class="button" id="backsp">
+            <img src="./images/backspace.svg" alt="backspace" class="back">
         </button>
 
         <button class="button numero">7</button>
@@ -44,12 +44,12 @@
     </div>
 
     <div class="link">
-        <a href="https://github.com/az1729" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/GiridharanS1729" target="_blank" rel="noopener noreferrer">
             <button class="social-icon" aria-label="Ir para o GitHub">
                 <img src="./images/Github.svg" alt="GitHub" class="icon">
             </button>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/giridharans1729" target="_blank" rel="noopener noreferrer">
             <button class="social-icon" aria-label="Ir para o LinkedIn">
                 <img src="./images/Linkedin.svg" alt="LinkedIn" class="icon">
             </button>
