--- a/1.Simple Calculator/index.html
+++ b/1.Simple Calculator/index.html
@@ -5,23 +5,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
-    <meta name="description" content="JavaScript calculator designed to provide
-        an intuitive and easy-to-use user experience!">
+    <meta name="description" content="JavaScript calculator designed to provide an intuitive and easy-to-use user experience!">
 
     <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="./Style/Style.css">
 </head>
-
+<!--Created By Giridharan S 2024-->
 <body>
     <div class="grid-container">
 
-        <input type="text" id="otp" value="0" readonly aria-label="Simple Calendar">
+        <input type="text" id="otp" value="0" readonly aria-label="Simple Calculator">
 
-        <button class="button clearbt" id="clearid">C</button>
+        <button class="button clearbt" id="botaoClean">C</button>
         <button class="button operando">÷</button>
         <button class="button operando">x</button>
-        <button class="button" id="backsp">
-            <img src="./images/backspace.svg" alt="backspace" class="back">
+        <button class="button" id="backspa">
+            <img src="./images/bsp.svg" alt="bsp" class="back">
         </button>
 
         <button class="button numero">7</button>
@@ -37,19 +36,19 @@
         <button class="button numero">1</button>
         <button class="button numero">2</button>
         <button class="button numero">3</button>
-        <button class="button" id="botaoResultado">=</button>
+        <button class="button" id="btzeroo">=</button>
 
         <button class="button numero" id="botaoZero">0</button>
         <button class="button ponto">.</button>
     </div>
 
     <div class="link">
-        <a href="https://github.com/GiridharanS1729" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/az1729" target="_blank" rel="noopener noreferrer">
             <button class="social-icon" aria-label="Ir para o GitHub">
                 <img src="./images/Github.svg" alt="GitHub" class="icon">
             </button>
         </a>
-        <a href="https://www.linkedin.com/in/giridharans1729" target="_blank" rel="noopener noreferrer">
+        <a href="#" target="_blank" rel="noopener noreferrer">
             <button class="social-icon" aria-label="Ir para o LinkedIn">
                 <img src="./images/Linkedin.svg" alt="LinkedIn" class="icon">
             </button>
